feat: Add VS Code conventional commit scopes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "conventionalCommits.scopes": [
         "modules",
-        "prod"
+        "prod",
+        "gha",
+        "devcontainer"
     ]
 }
