--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,10 @@
 name: Semantic Release
 
 on:
-  push:
-    branches: [main]
+  - pull_request
+
+  # push:
+  #   branches: [main]
 
 jobs:
   semantic-release:
@@ -18,11 +20,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
+      - name: Render terraform docs and push changes back to PR
+        uses: terraform-docs/gh-actions@main
         with:
-          extra_plugins: |
-            @semantic-release/changelog
-            @semantic-release/git
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git-push: "true"
+          output-file: README.md
+          output-method: inject
+          working-dir: src/cloud/aws
+
+      # - name: Semantic Release
+      #   uses: cycjimmy/semantic-release-action@v4
+      #   with:
+      #     extra_plugins: |
+      #       @semantic-release/changelog
+      #       @semantic-release/git
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
