--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Render terraform docs and push changes back to PR
         uses: terraform-docs/gh-actions@main
@@ -26,6 +28,7 @@ jobs:
           git-push: "true"
           output-file: README.md
           output-method: inject
+          recursive: true
           working-dir: src/cloud/aws
 
       # - name: Semantic Release
