--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,8 @@
 name: Semantic Release
 
 on:
-  - pull_request
-
-  # push:
-  #   branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   semantic-release:
@@ -31,11 +29,11 @@ jobs:
           recursive: true
           working-dir: src/cloud/aws
 
-      # - name: Semantic Release
-      #   uses: cycjimmy/semantic-release-action@v4
-      #   with:
-      #     extra_plugins: |
-      #       @semantic-release/changelog
-      #       @semantic-release/git
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
