--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -146,7 +146,9 @@
       "uid": "1000",
       "upgradePackages": "false",
       "username": "vscode"
-    }
+    },
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   },
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind",
