--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+          persist-credentials: true
+
+      - name: Fix Git permissions
+        run: sudo chown -R $(whoami) .git
 
       - name: Render terraform docs and push changes back to PR
         uses: terraform-docs/gh-actions@main
