ci(gha): Add repo object write permissions

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,7 @@ jobs:
       id-token: write # Use of OIDC for npm provenance
       issues: write # Comment on released issues
       pull-requests: write # Comment on released pull requests
+      repository-projects: write # Write to Git objects database
 
     steps:
       - name: Checkout
