--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
           persist-credentials: true
+          fetch-depth: 0
 
       - name: Fix Git permissions
         run: sudo chown -R $(whoami) .git
