--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,11 @@ jobs:
   semantic-release:
     name: Semantic Release
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      contents: write # Publish a GitHub release
+      id-token: write # Use of OIDC for npm provenance
+      issues: write # Comment on released issues
+      pull-requests: write # Comment on released pull requests
 
     steps:
       - name: Checkout
